--- a/src/components/customTabs/tabs.css
+++ b/src/components/customTabs/tabs.css
@@ -40,6 +40,7 @@
     border-top: none;
     color: #333;
     font-size: 16px;
+    font-weight: 600;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
