--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     background: linear-gradient(to right, #0f0c29, #8e85f3, #36365a);
-    height: 100vh;
+    min-height: 100vh;
     box-shadow: 0px 0px 7px #ccc;
     justify-content: start;
     align-items: center;
