--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#root {
+  height: 100%;
+  overflow: hidden; /* Optional: Prevent scrolling */
+}
 body {
   height: 100%;   
 }
